--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,4 +27,4 @@ jobs:
         with:
           push: true
           tags: brotherlogic/testbed:latest
-          platform: linux/arm/v7,linux/arm64
+          platforms: linux/arm/v7,linux/arm64
