--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -24,11 +24,11 @@ jobs:
           registry: ${{ secrets.REGISTRY_URL }}
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
-          
+
       -
         name: Build and push
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: brotherlogic/testbed:latest
+          tags: '${{ secrets.REGISTRY_URL }}/brotherlogic/testbed:latest'
           platforms: linux/arm/v7,linux/arm64
