--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -30,5 +30,6 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
+          builder: ${{ steps.buildx.outputs.name }}
           tags: '${{ secrets.REGISTRY_URL }}/brotherlogic/testbed:latest'
           platforms: linux/arm/v7,linux/arm64
