--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   docker:
+
     runs-on: ubuntu-latest
     steps:
       -
@@ -31,5 +32,5 @@ jobs:
         with:
           push: true
           builder: ${{ steps.buildx.outputs.name }}
-          tags: "${{ secrets.REGISTRY_URL }}/brotherlogic/testbed:latest"
+          tags: "${{ secrets.REGISTRY_SHORT }}/brotherlogic/testbed:latest"
           platforms: linux/arm/v7,linux/arm64
